--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
         <a [routerLink]="['/dashboard']" class="logo">
 
             
-            <img *ngIf="IsAdmin" src="assets/img/logo-latest.png" width="200" height="50" alt="">
-            <img *ngIf="!IsAdmin" src="assets/img/logo-mudun.png" width="200" height="50" alt="">
+            <img *ngIf="IsAdmin" src="assets/img/Noble.svg" width="200" height="50" alt="">
+            <img *ngIf="!IsAdmin" src="assets/img/Mudun.svg" width="200" height="50" alt="">
         </a>
     </div>
     <!-- /Logo -->
@@ -22,7 +22,7 @@
 
     <!-- Header Title -->
     <div class="page-title-box">
-        <h3>OneHR</h3>
+        <!-- <h3>OneHR</h3> -->
     </div>
     <!-- /Header Title -->
 
@@ -141,7 +141,7 @@
 
         <li class="nav-item dropdown has-arrow main-drop">
             <a href="javascript:" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                <span class="user-img"><img src="assets/img/profiles/avatar-02134.jpg" alt="">
+                <span class="user-img"><img src="assets/img/profiles/avatar-01.jpg" alt="">
                     <span class="status online"></span></span>
                 <span>Admin</span>
             </a>
