--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -4,7 +4,7 @@
     
         <!-- Account Logo -->
         <div class="account-logo">
-            <a href="javascript:"><img src="assets/img/logo2.png" alt="OneHR"></a>
+            <a href="javascript:"><img src="assets/img/Noble_big.svg" alt="OneHR"></a>
         </div>
         <!-- /Account Logo -->
         
